{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player1Keyboard",
            "id": "6251d37c-0a01-4b71-b3f0-d94e3c95b402",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "23f200d5-bb23-4b06-9798-4d1144ac38e5",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "8bbe1f2c-fc9d-42d7-a32e-d66b297b6761",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(duration=0.01,pressPoint=1.401298E-45)",
                    "initialStateCheck": true
                },
                {
                    "name": "Fastfall",
                    "type": "Button",
                    "id": "68e94497-d8ed-4ae4-b848-bc653109f748",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jab",
                    "type": "Button",
                    "id": "2461d014-0acb-428d-bbcc-cf9369f589cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Recover",
                    "type": "Value",
                    "id": "a6f964a8-4f51-41de-a19f-0615e120196d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(duration=0.01)",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "3D Vector",
                    "id": "380792c4-160d-45a9-bb4c-ffd74ba69b22",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "e11222ca-2e2b-47e4-8c28-1984f1b94f1b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0a775978-aa5c-4f66-b257-6d9d641604ad",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "59c076bc-b264-463b-a353-0fab28629234",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "664a8d83-da3f-44cc-b58d-7db38a014f31",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fastfall",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11d40a3e-b9d4-49a4-9672-8f4282e10e6a",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "417decf0-0ba5-49ec-b223-6e6bf2176b71",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Recover",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player2Keyboard",
            "id": "f5e392cb-e42b-45bd-a363-95e3a9b6dd3d",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "65a67b58-c720-435c-b86b-5d7e6266e2d3",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "7ae482c0-5be9-4d72-8153-45b265ba2418",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(duration=0.01,pressPoint=1.401298E-45)",
                    "initialStateCheck": true
                },
                {
                    "name": "Fastfall",
                    "type": "Button",
                    "id": "955a2a4c-25bd-4a7d-bb43-f5a179292e9e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jab",
                    "type": "Button",
                    "id": "900748a1-6a8d-468d-9643-20175507fe4a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Recover",
                    "type": "Value",
                    "id": "5de79e52-7e25-4622-85b4-9c8a9fb5642e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Tap(duration=0.01)",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "3D Vector",
                    "id": "ba6ed57d-4066-4337-b383-b0a049b78d11",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "2044532b-eb55-4dc9-8038-a28b905db38d",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6b03367e-788b-493c-829d-5cbc83ec9adf",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c688b87c-c0ce-4fda-b6f7-1929f3aca71e",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da715dff-3a8a-492f-99cd-76eb21f2bb58",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fastfall",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab7e899e-78fe-421c-8300-f13d605c872d",
                    "path": "<Keyboard>/rightCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a497b81-b667-4070-8fe6-3c281be4d797",
                    "path": "<Keyboard>/numpad0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Recover",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}